feat: Creation of the create-habit-entry and delete habit service, route and test
